--- a/Visualize3D/WebContent/visOnline.html
+++ b/Visualize3D/WebContent/visOnline.html
@@ -27,11 +27,26 @@
 		/*
 		var DATASET_NAME = 'thinklab-hakozaki';
 		var USER_NAME = '1';
-		var MAP_NAME = 'thinklab-hakozaki'
+		var MAP_NAME = 'thinklab-hakozaki';
 		*/
+		/*
 		var DATASET_NAME = 'thinklab-hakozaki-shrink-0.75';
 		var USER_NAME = '1-shrink-0.75';
-		var MAP_NAME = 'thinklab-hakozaki-shrink-0.75'
+		var MAP_NAME = 'thinklab-hakozaki-shrink-0.75';
+		*/
+		/*
+		var DATASET_NAME = 'cebit-thinklab-shrink-0.75';
+		var USER_NAME = '1-shrink-0.75';
+		var MAP_NAME = 'cebit-thinklab-shrink-0.75';
+		*/
+		var DATASET_NAME = 'shelf-office';
+		var USER_NAME = '1-cmu-shrink-0.75';
+		var MAP_NAME = 'shelf-office';
+		/*
+		var DATASET_NAME = 'uc-peanut';
+		var USER_NAME = '1-cmu-shrink-0.75';
+		var MAP_NAME = 'uc-peanut';
+		*/
 		
 		var SFM_STRUCTURE_PLY_FILE = './data/online/' + DATASET_NAME + '/colorized_global_structure.ply';
 		var SFM_CAMERA_PLY_FILE = './data/online/' + DATASET_NAME + '/colorized_global_camera.ply';
